# Sandbox-2D

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  buildDebug.sh  buildRelease.sh  package.sh
assets/: splash.json  splash.txt
assets/shaders/: grayscale.fs  water.fs  water.vs
data/: worlds.json
include/game/: game.hpp  gameState.hpp  loadingState.hpp  menuState.hpp  state.hpp
include/mngr/: animation.hpp  input.hpp  particle.hpp  resource.hpp  sound.hpp
include/objs/: block.hpp  console.hpp  furniture.hpp  generation.hpp  inventory.hpp  item.hpp  map.hpp  player.hpp
include/ui/: button.hpp  checkbox.hpp  input.hpp  keybindIndicator.hpp  popup.hpp  scrollframe.hpp  uiconstants.hpp
include/util/: config.hpp  debug.hpp  fileio.hpp  format.hpp  input.hpp  math.hpp  parallax.hpp  position.hpp  random.hpp  render.hpp  strarray.hpp  text.hpp
src/: main.cpp
src/game/: game.cpp  gameState.cpp  loadingState.cpp  menuState.cpp  state.cpp
src/mngr/: animation.cpp  input.cpp  particle.cpp  resource.cpp  sound.cpp
src/objs/: block.cpp  console.cpp  furniture.cpp  generation.cpp  inventory.cpp  item.cpp  map.cpp  player.cpp
src/ui/: button.cpp  checkbox.cpp  input.cpp  keybindIndicator.cpp  popup.cpp  scrollframe.cpp
src/util/: button.cpp  debug.cpp  fileio.cpp  format.cpp  input.cpp  math.cpp  parallax.cpp  position.cpp  render.cpp  text.cpp
